--- a/myapp/templates/projects.html
+++ b/myapp/templates/projects.html
@@ -18,4 +18,5 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
+        <h1>Esto es nuevo asere que talla</h1>
         {% endblock content %}   
